--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gh-pages": "^3.1.0",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.15.0",
+    "particulate": "^0.3.3",
     "pathseg": "^1.2.0",
     "poly-decomp": "^0.3.0",
     "react": "^16.14.0",
@@ -31,6 +32,7 @@
     "react-mailchimp-form": "^1.0.2",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.1",
+    "three": "^0.124.0",
     "typography": "^0.16.19"
   },
   "devDependencies": {
